--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "bootstrap": "^5.3.3",
+    "i18next": "^25.5.2",
     "next": "14.2.11",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.7.3",
     "react-modal-video": "^2.0.2",
     "react-paginate": "^8.2.0",
     "react-range": "^1.10.0",
